--- a/views/Funcionarios.html
+++ b/views/Funcionarios.html
@@ -179,7 +179,7 @@
                                     </form>
                                     <footer class="modal-footer">
                                         <button id="salvar" class="button green">Salvar</button>
-                                        <button id="cancelar" class="button blue">Cancelar</button>
+                                        <button id="cancelar" class="button blue"><a href="Funcionarios.html">Cancelar</a></button>
                                     </footer>
                                 </div>
                             </div>
