--- a/views/Livros.html
+++ b/views/Livros.html
@@ -175,7 +175,7 @@
                                     </form>
                                     <footer class="modal-footer">
                                         <button id="salvar" class="button green">Salvar</button>
-                                        <button id="cancelar" class="button blue">Cancelar</button>
+                                        <button id="cancelar" class="button blue"><a href="Livros.html">Cancelar</a></button>
                                     </footer>
                                 </div>
                             </div>
