--- a/views/Alunos.html
+++ b/views/Alunos.html
@@ -177,7 +177,7 @@
                                     </form>
                                     <footer class="modal-footer">
                                         <button id="salvar" class="button green">Salvar</button>
-                                        <button id="cancelar" class="button blue">Cancelar</button>
+                                        <button id="cancelar" class="button blue"><a href="Alunos.html">Cancelar</a></button>
                                     </footer>
                                 </div>
                             </div>
