--- a/views/Dashboard.html
+++ b/views/Dashboard.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
-    <link rel="icon" href="img/livro.ico" />
+    <link rel="icon" href="/img/book.ico" />
     <link rel="stylesheet" href="/css/main.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
     <link rel="stylesheet" href="/css/bower_components/bootstrap/dist/css/bootstrap.min.css">
@@ -40,13 +40,17 @@
                             <i class="bi bi-person-vcard"></i>
                                 <span class="link-name">Funcionários</span>
                             </a></li>
+                    <li><a href="Editoras.html">
+                            <i class="bi bi-clipboard-data"></i>
+                                <span class="link-name">Editoras</span>
+                            </a></li>
                     <li><a href="Livros.html">
                             <i class="bi bi-clipboard-data"></i>
-                            <span class="link-name">Livros</span>
+                                <span class="link-name">Livros</span>
                         </a></li>
                     <li><a href="Emprestimos.html">
                         <i class="bi bi-person-workspace"></i>
-                            <span class="link-name">Empréstimos</span>
+                                <span class="link-name">Empréstimos</span>
                         </a></li>
                 </ul><!--nav-links-->
             </div><!--menu-items-->
@@ -60,7 +64,7 @@
                 
                 <div class="actionimg">
                     <div class="profile" onclick="menuToggle();">
-                        <img src="img/avatar5.png" alt="">
+                      <img src="/img/avatar5.png" alt="">
                     </div>
                     <div class="menu">
                         <h3>
@@ -81,7 +85,7 @@
                             </li>
                             <li>
                                 <span class="material-icons icons-size"><i class="bi bi-box-arrow-right"></i></span>
-                                <a href="index.html">Saida</a>
+                                <a href="index.html">Sair</a>
                             </li>
                         </ul>
                     </div><!--menu-->
@@ -176,6 +180,6 @@
   </div> <!--corpo-->
 </body>
 
-
+  <script src="/js/main.js"></script>
 
 </html>
