--- a/views/Alunos.html
+++ b/views/Alunos.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Biblioteca Escolar - Alunos</title>
 
-    <link rel="icon" href="img/livro.ico" />
+    <link rel="icon" href="/img/book.ico" />
 
     <link rel="stylesheet" href="/css/emprestimo.css">
     <link rel="stylesheet" href="/css/crud.css">
@@ -48,13 +48,17 @@
                             <i class="bi bi-person-vcard"></i>
                                 <span class="link-name">Funcionários</span>
                             </a></li>
+                    <li><a href="Editoras.html">
+                            <i class="bi bi-clipboard-data"></i>
+                                <span class="link-name">Editoras</span>
+                            </a></li>
                     <li><a href="Livros.html">
                             <i class="bi bi-clipboard-data"></i>
-                            <span class="link-name">Livros</span>
+                                <span class="link-name">Livros</span>
                         </a></li>
                     <li><a href="Emprestimos.html">
                         <i class="bi bi-person-workspace"></i>
-                            <span class="link-name">Empréstimos</span>
+                                <span class="link-name">Empréstimos</span>
                         </a></li>
                 </ul><!--nav-links-->
             </div><!--menu-items-->
@@ -68,7 +72,7 @@
                 
                 <div class="actionimg">
                     <div class="profile" onclick="menuToggle();">
-                        <img src="img/avatar5.png" alt="">
+                        <img src="/img/avatar5.png" alt="">
                     </div>
                     <div class="menu">
                         <h3>
@@ -181,5 +185,9 @@
                                     </footer>
                                 </div>
                             </div>
+
+    <script src="/js/alunos.js"></script>
+    <script src="/js/main.js"></script>
+
 </body>
 </html>
