--- a/views/Livros.html
+++ b/views/Livros.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Biblioteca Escolar - Livros</title>
 
-    <link rel="icon" href="img/livro.ico" />
+    <link rel="icon" href="/img/book.ico" />
     
     <link rel="stylesheet" href="/css/emprestimo.css">
     <link rel="stylesheet" href="/css/crud.css">
@@ -49,13 +49,17 @@
                             <i class="bi bi-person-vcard"></i>
                                 <span class="link-name">Funcionários</span>
                             </a></li>
+                    <li><a href="Editoras.html">
+                            <i class="bi bi-clipboard-data"></i>
+                                <span class="link-name">Editoras</span>
+                            </a></li>
                     <li><a href="Livros.html">
                             <i class="bi bi-clipboard-data"></i>
-                            <span class="link-name">Livros</span>
+                                <span class="link-name">Livros</span>
                         </a></li>
                     <li><a href="Emprestimos.html">
                         <i class="bi bi-person-workspace"></i>
-                            <span class="link-name">Empréstimos</span>
+                                <span class="link-name">Empréstimos</span>
                         </a></li>
             </ul><!--nav-links-->
             </div><!--menu-items-->
@@ -74,7 +78,7 @@
 
                    <div class="actionimg">
                     <div class="profile" onclick="menuToggle();">
-                        <img src="img/avatar5.png" alt="">
+                        <img src="/img/avatar5.png" alt="">
                     </div>
 
                     <div class="menu">
@@ -187,7 +191,8 @@
         </section>
     </div> <!--corpo-->
                             
-                        
+    <script src="/js/livros.js"></script>
+    <script src="/js/main.js"></script>
 
 </body>
 </html>
