--- a/views/index.html
+++ b/views/index.html
@@ -5,7 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Biblioteca Seduc - Login</title>
 
-    <link rel="icon" href="img/livro.ico" />
+    <link rel="icon" href="/img/book.ico" />
+    
     <link rel="stylesheet" href="/css/main.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
     <link rel="stylesheet" href="/css/bower_components/bootstrap/dist/css/bootstrap.min.css">
@@ -23,7 +24,7 @@
         </div>
         <form action = "Dashboard.html">
             <div class="row">
-                <div class = "i"><i class = "fa-solid fa-user" style = "color: white;"></i></div>
+                <div class = "i"><i class = "fa-solid fa-user" style="color: white;"></i></div>
                 <input type = "text" placeholder = "Email" id = "email" required>
             </div>
             <div class="row">
